# music_app

./: .gitignore
client/: CMakeLists.txt  btform.cpp  btform.h  btform.ui  client.cpp  client.h  client.ui  commonpage.cpp  commonpage.h  commonpage.ui  listitembox.cpp  listitembox.h  listitembox.ui  musiclist.cpp  recbox.cpp  recbox.h  recbox.ui  recboxitem.cpp  recboxitem.ui  resource.qrc  volumetool.cpp  volumetool.h  volumetool.ui
client/resources/: Resource.qrc
client/resources/music/: 3.lrc  5.lrc  6.lrc  BAAD - 君が好きだと叫びたい~TV Version~.lrc  ChouCho - 灰色のサーガ.lrc  喜欢你 Beyond (歌词版)(MP3_160K).lrc  李榮浩 Ronghao Li - 年少有為 If I Were Young (華納 Official HD 官方MV)(MP3_160K).lrc
client/resources/style/: style.qss
client/src/model/: music.cpp  music.h  musiclist.cpp  musiclist.h
client/src/ui/: client.ui  commonpage.ui  listitembox.ui  recboxitem.ui
client/src/widgets/: client.cpp  client.h  commonpage.cpp  commonpage.h  listitembox.cpp  listitembox.h  recbox.cpp  recbox.h  recboxitem.h  volumetool.cpp
client/style/: style.qss
